<resources>
    <string name="app_name">衣布购</string>
    <string name="main_home_txt">首页</string>
    <string name="main_inventory_manager">库存管理</string>
    <string name="main_partner_ship">合作关系</string>
    <string name="main_shop_mall">商城</string>
    <string name="main_personal_center">个人中心</string>
    <string name="return_money">回款金额</string>
    <string name="input_return_money_hint">输入回款金额:</string>
    <string name="login_txt">登录</string>
    <string name="empty_data">暂无数据</string>
    <string name="search_hint_txt">请输入关键字</string>
    <string name="share_txt">分享</string>
    <string name="print_txt">打印</string>
    <string name="input_storage">入库</string>
    <string name="output_storage">出库</string>
    <string name="inventory_detail">进销存明细</string>
    <string name="to_be_input_goods">待入库商品</string>
    <string name="current_month_input">当月入库</string>
    <string name="current_month_output">当月出库</string>
    <string name="current_month_turnover">当月营业额</string>
    <string name="to_be_payment">待付款</string>
    <string name="to_be_received">待收货</string>
    <string name="to_be_evaluated">待评价</string>
    <string name="after_sale_order">售后订单</string>
    <string name="recommend_for_you">为您推荐</string>
    <string name="wait_treasury">待入库订单数</string>
    <string name="chuli">正在处理订单</string>
    <string name="zongliang">商品总量</string>
    <string name="all_value">总价值</string>
    <string name="rukudan">入库单</string>
    <string name="chukudan">出库单</string>
    <string name="tuihui">退回订单</string>
    <string name="guaqi">订单挂起</string>
    <string name="shop_out">商品出库</string>
    <string name="shop_in">商品入库</string>
    <string name="chuanjian">创建订单</string>
    <string name="ruku_shop">手动入库商品</string>
    <string name="select_shop">选择商品</string>
    <string name="select_customer">选择客户</string>
    <string name="gonyingshang">供应商</string>
    <string name="select_order">订单选项</string>
    <string name="shuidian">税点</string>
    <string name="shuru_shuidian">请输入税点(选填)</string>
    <string name="shur_fujiafeiyong">请输入附加费用(选填)</string>
    <string name="fujiafeiyong">附加费用</string>
    <string name="youhui">优惠</string>
    <string name="beizhu">备注</string>
    <string name="shur_beizhu">请输入备注(选填)</string>
    <string name="shur_youhui">请输入优惠金额(选填)</string>
    <string name="now_order">立即下单</string>
    <string name="guaqinow">挂起</string>
    <string name="ruku_shops">点击选择要入库的商品</string>
    <string name="jx_select_goods">继续选择商品</string>
    <string name="inventory_goods_count">商品总数</string>
    <string name="inventory_counts">库存总量</string>
    <string name="inventory_count_cost">库存总成本</string>
    <string name="input_goods">商品入库</string>
    <string name="hand_input_goodos">自行入库</string>
    <string name="output_goods">商品出库</string>
    <string name="new_create_goods">新建商品</string>
    <string name="order_record">订单记录</string>
    <string name="inventory_goods">库存商品</string>
    <string name="comprehensive_txt">综合</string>
    <string name="output_count">出库量</string>
    <string name="inventory_count_txt">库存量</string>
    <string name="inventory_txt">库存</string>
    <string name="time_txt">时间</string>
    <string name="sales_txt">销量</string>
    <string name="personal_inventory_system">进销存系统</string>
    <string name="personal_category_manager">分类管理</string>
    <string name="personal_color_manager">颜色管理</string>
    <string name="personal_material_bank">材质库</string>
    <string name="personal_mine_company">我的公司</string>
    <string name="personal_finance_manager">财务管理</string>
    <string name="personal_cloth_buy">衣布购商城</string>
    <string name="personal_all_order">全部订单</string>
    <string name="personal_address_manager">管理收货地址</string>
    <string name="personal_mine_collect">我的收藏</string>
    <string name="personal_mine_foot">我的足迹</string>
    <string name="personal_normal_setting">通用设置</string>
    <string name="personal_mine_message">个人信息</string>
    <string name="personal_safety_setting">安全性</string>
    <string name="personal_feed_back">意见反馈</string>
    <string name="personal_contact_service">联系</string>
    <string name="personal_mine_about">关于我们</string>
    <string name="personal_login_out">退出</string>
    <string name="personal_notice_txt">消息</string>
    <string name="personal_customer_level">客户级别管理</string>
    <string name="new_create_category">新建分类</string>
    <string name="edit__category">编辑分类</string>
    <string name="new_create_category_hint">输入新分类名称</string>
    <string name="input_category_hint">请输入分类名称</string>
    <string name="new_create_color">添加新颜色</string>
    <string name="new_create_material">添加新材质</string>
    <string name="new_create_spec">添加新规格</string>
    <string name="new_create_material_hint">输入新材质名称</string>
    <string name="new_create_spec_hint">输入新规格名称</string>
    <string name="not_add_company">没有加入任何公司</string>
    <string name="new_create_company">创建公司</string>
    <string name="edit_company_msg">编辑公司</string>
    <string name="company_message">企业信息</string>
    <string name="company_for_head">公司负责人</string>
    <string name="company_for_phone">联系方式</string>
    <string name="company_for_email">邮箱</string>
    <string name="company_for_industry">所属行业</string>
    <string name="company_for_country">国籍</string>
    <string name="company_for_address">地址</string>
    <string name="company_for_announcement">公司公告:</string>
    <string name="company_name_txt">公司名：%s</string>
    <string name="member_list_txt">成员</string>
    <string name="member_detail_txt">成员详情</string>
    <string name="company_btn_look">查看成员列表</string>
    <string name="company_btn_update">更新公司信息</string>
    <string name="company_btn_leave">离开该公司</string>
    <string name="company_btn_add">加入该公司</string>
    <string name="company_btn_transfer">转让该公司</string>
    <string name="finance_return_money">总回款</string>
    <string name="finance_returned_money">已回款</string>
    <string name="finance_wait_money">待回款</string>
    <string name="add_return_money_record">添加回款记录</string>
    <string name="color_name_txt">颜色名称</string>
    <string name="color_name_hint">请输入颜色名称</string>
    <string name="create_add_color_id">(以色码创建)</string>
    <string name="color_id_txt">色码</string>
    <string name="color_id_hint">请输入色码</string>
    <string name="create_add_color_rgb">(以RGB创建)</string>
    <string name="r_hint">输入R值</string>
    <string name="g_hint">输入G值</string>
    <string name="b_hint">输入B值</string>
    <string name="alpha_color_txt">透明度</string>
    <string name="color_template_txt">以模板创建</string>
    <string name="check_sure_color_id">请输入正确的色码值</string>
    <string name="company_cover">公司封面</string>
    <string name="company_name">公司名称</string>
    <string name="company_name_hint">请输入公司名称</string>
    <string name="company_country">公司所在国家</string>
    <string name="company_country_hint">请选择国家</string>
    <string name="company_email">公司邮箱</string>
    <string name="company_email_hint">请输入公司邮箱</string>
    <string name="company_sure_email_hint">请输入正确的邮箱</string>
    <string name="company_industry">行业</string>
    <string name="company_industry_hint">请输入公司经营范围</string>
    <string name="company_contact_hint">请输入联系方式</string>
    <string name="company_sure_contact_hint">请输入正确的联系方式</string>
    <string name="company_address_hint">请输入公司地址</string>
    <string name="company_notice">公司公告</string>
    <string name="company_notice_hint">请输入公司公告</string>
    <string name="create_txt">创建</string>
    <string name="save_txt">保存</string>
    <string name="invitation_member">已邀请成员</string>
    <string name="on_line_service">在线客服</string>
    <string name="phone_service">电话客服</string>
    <string name="member_msg">用户信息</string>
    <string name="member_phone">联系方式</string>
    <string name="member_email">邮箱</string>
    <string name="member_company">所属公司</string>
    <string name="member_add_time">加入时间</string>
    <string name="member_birthday">生日</string>
    <string name="member_custom_setting">自定义设置</string>
    <string name="member_nick_name">备注名</string>
    <string name="member_position">职位</string>
    <string name="remove_member">移除该成员</string>
    <string name="add_member">添加该成员</string>
    <string name="add_new_member">添加新成员</string>
    <string name="personal_msg_name">姓名</string>
    <string name="personal_msg_sex">性别</string>
    <string name="personal_msg_birth">生日</string>
    <string name="personal_msg_head_img">头像</string>
    <string name="safety_pwd_setting">登录密码设置</string>
    <string name="safety_phone_setting">绑定/修改手机号码</string>
    <string name="safety_auto_login">自动登录</string>
    <string name="feed_back_hint">请输入您的意见或者建议</string>
    <string name="commit_txt">提  交</string>
    <string name="new_goods_name">商品名称</string>
    <string name="new_goods_name_hint">请输入商品名称</string>
    <string name="new_goods_category">所属分类</string>
    <string name="new_goods_category_hint">请选择所属分类</string>
    <string name="new_goods_id">货号</string>
    <string name="new_goods_id_hint">请输入货号</string>
    <string name="new_goods_cost_price">成本价</string>
    <string name="new_goods_retail_price">零售价</string>
    <string name="new_goods_remark">备注</string>
    <string name="new_goods_color">选择颜色</string>
    <string name="new_goods_size">规格管理</string>
    <string name="new_goods_material">选择材质</string>
    <string name="new_goods_img">选择封面</string>
    <string name="material_input_percent">请输入材质占比</string>
    <string name="material_sure_percent">请输入正确的占比</string>
    <string name="goods_pack_msg">包装配比</string>
    <string name="optional_txt">选填</string>
    <string name="new_add_inventory">新增的库存</string>
    <string name="multiple_line_input">多行输入</string>
    <string name="inventory_by_hand">手动入库商品</string>
    <string name="new_add_treasury">新增库存</string>
    <string name="inventory_detail_time">时间</string>
    <string name="inventory_detail_count">商品量</string>
    <string name="inventory_detail_price">金额</string>
    <string name="goods_detail_msg">商品信息</string>
    <string name="goods_detail_super">供应商</string>
    <string name="material_txt">材质</string>
    <string name="purchase_price">进货价</string>
    <string name="size_count">规格数量</string>
    <string name="count">选择产品规格</string>
    <string name="colur">颜色</string>
    <string name="chicun">尺寸</string>
    <string name="buy_number">购买数量</string>
    <string name="edit_category">所属分类</string>
    <string name="edit_category_hint">请选择分类</string>
    <string name="inventory_warning">库存预警</string>
    <string name="inventory_warning_hint">请填写预警值（选填）</string>
    <string name="remark_hint">请填写备注（选填）</string>
    <string name="correlation_goods">该商品已经关联%s</string>
    <string name="look_goods_detail">查看商品详情</string>
    <string name="input_txt">请输入%s</string>
    <string name="input_remark_hint">请输入备注名</string>
    <string name="select_color">选择颜色</string>
    <string name="select_spec">选择规格</string>
    <string name="select_material">选择材质</string>
    <string name="select_position">选择职位</string>
    <string name="select_member">选择成员</string>
    <string name="invitation_company">邀请您加入该公司</string>
    <string name="invitation_agree">同意</string>
    <string name="invitation_refuse">拒绝</string>
    <string name="goods_inventory">商品/库存</string>
    <string name="goods_sale_detail">销售明细</string>
    <string name="goods_customer_list">客户名单</string>
    <string name="old_goods_id">原货号</string>
    <string name="goods_detail_package_percent">包装配比</string>
    <string name="category_txt">分类</string>
    <string name="goods_create_time">商品创建时间</string>
    <string name="goods_size_inventory">规格库存</string>
    <string name="btn_add_inventory">新增入库</string>
    <string name="btn_output_inventory">出库</string>
    <string name="btn_edit_goods">编辑商品</string>
    <string name="btn_delete_goods">删除商品</string>
    <string name="btn_create_qr_code">生成二维码</string>
    <string name="received_personal">收货人</string>
    <string name="received_address">收货地址</string>
    <string name="edit_txt">编辑</string>
</resources>