<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_home_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_gray_r3"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:paddingVertical="@dimen/dp_10">
        <com.micropole.inventorysystem.widght.CustomCenterView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:top_txt_content="@string/inventory_goods_count"
            app:bottom_txt_content="1"/>
        <com.micropole.inventorysystem.widght.CustomCenterView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:top_txt_content="@string/inventory_counts"
            app:bottom_txt_content="1"/>
        <com.micropole.inventorysystem.widght.CustomCenterView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:top_txt_content="@string/inventory_count_cost"
            app:bottom_txt_content="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_home_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_14">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_menu_crop"
            android:textSize="@dimen/main_txt_size"
            android:textColor="@color/color666666"
            android:text="@string/input_goods"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_menu_crop"
            android:textSize="@dimen/main_txt_size"
            android:textColor="@color/color666666"
            android:text="@string/output_goods"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_new_goods"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_menu_crop"
            android:textSize="@dimen/main_txt_size"
            android:textColor="@color/color666666"
            android:text="@string/new_create_goods"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_menu_crop"
            android:textSize="@dimen/main_txt_size"
            android:textColor="@color/color666666"
            android:text="@string/order_record"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/color666666"
        android:textSize="@dimen/main_txt_size"
        android:text="@string/inventory_goods"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_gray_r3"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingVertical="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:textColorHint="@color/text_edit_hint"
        android:textSize="@dimen/main_txt_size"
        android:text=""
        android:hint="@string/search_hint_txt"/>

    <net.lucode.hackware.magicindicator.MagicIndicator
        android:id="@+id/magic_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output_count"
            android:layout_marginLeft="@dimen/dp_14"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_count_txt"
            android:layout_marginLeft="@dimen/dp_14"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_txt"
            android:layout_marginLeft="@dimen/dp_14"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_txt"
            android:layout_marginLeft="@dimen/dp_14"/>
    </LinearLayout>

</LinearLayout>