<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_bg">

    <include layout="@layout/view_title"/>

    <com.micropole.inventorysystem.widght.NormalLlView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_txt_content="@string/personal_msg_name"/>
    <com.micropole.inventorysystem.widght.NormalLlView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_txt_content="@string/personal_msg_sex"/>
    <com.micropole.inventorysystem.widght.NormalLlView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_txt_content="@string/personal_msg_birth"/>
    <com.micropole.inventorysystem.widght.NormalLlView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_txt_content="@string/personal_msg_head_img"/>


</LinearLayout>