<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_14"
        android:textSize="@dimen/main_txt_size"
        android:textColor="@color/color666666"
        android:text="@string/new_goods_remark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape_white_gray_r3"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:gravity="top"
        android:textSize="@dimen/main_txt_size"
        android:textColor="@color/color666666"
        android:textColorHint="@color/color666666"
        android:hint="@string/multiple_line_input"
        android:paddingTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_white_gray_r3"
        android:textSize="@dimen/main_txt_size"
        android:textColor="@color/color666666"
        android:text="@string/input_storage"/>

</LinearLayout>